# Spec

./: .gitignore  LICENSE  pyproject.toml
spec/: __init__.py  _helpers.py  _typing_compat.py  _typing_helpers.py  errors.py  item.py  model.py  util.py
tests/: _test_notes.py  test_integration.py  test_spec.py  test_utils.py
